--- a/src/app/formdemo/formdemo.component.html
+++ b/src/app/formdemo/formdemo.component.html
@@ -2,15 +2,24 @@
 <br>
 <br>
 
-<form>
+<form #login="ngForm" (ngSubmit)="submit(login)">
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <input #name="ngModel" required minlength="2" type="email" class="form-control"  placeholder="Enter email" ngModel>
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
+    <div *ngIf="name.touched && name.invalid" class="alert-danger">
+      <div *ngIf="name.errors?.['required']">Email is required</div>
+      <div *ngIf="name.errors?.['minlength']">Invalid email 
+
+      </div>
+    </div>
+
+    
+
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ngModel>
     </div>
     <div class="form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -18,3 +27,9 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+  
+
+
+
+
+
